terraform/modules/ecs/vpc.tf
resource "aws_vpc" "main" {
  cidr_block = "10.0.0.0/27"

  tags = {
    Name = "main-vpc"
  }
}
