terraform/modules/ecs/secgroup.tf
// spring
resource "aws_security_group" "spring_sg" {
  name   = "spring-sg"
  vpc_id = aws_vpc.main.id

  //Allow users to access API
  //to-from ports: is a range
  ingress {
    from_port   = 8080
    to_port     = 8080
    protocol    = "tcp"
    cidr_blocks = ["0.0.0.0/0"]
  }

  # Allow app to call anything (DB, internet)
  egress {
    from_port   = 0
    to_port     = 0
    protocol    = "-1"
    cidr_blocks = ["0.0.0.0/0"]
  }
}

resource "aws_security_group" "db_sg" {
  name   = "db-sg"
  vpc_id = aws_vpc.main.id

  # ONLY allow Spring app to talk to DB
  ingress {
    from_port       = 3306
    to_port         = 3306
    protocol        = "tcp"
    security_groups = [aws_security_group.spring_sg.id]
  }

  # DB can respond back
  egress {
    from_port   = 0
    to_port     = 0
    protocol    = "-1"
    cidr_blocks = ["0.0.0.0/0"]
  }
}
